<resources>
    <string name="app_name">Project 10</string>
    <string name="icon">project icon</string>
    <string name="p1">Single Screen App</string>
    <string name="image_square_one">Image of Square One</string>
    <string name="hangout">    Hangout with friends and party hard!! A place to dine with family and mates.</string>
    <string name="address">Address: Chitkara University, Rajpura</string>
    <string name="welcome">WELCOME TO SQUARE ONE!</string>
    <string name="phone">Phone No: +919056308813</string>
    <string name="square_one">Square One</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="fouls_0">Fouls: 0</string>
    <string name="goal">Goal</string>
    <string name="foul">Foul</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="football">Football</string>
    <string name="note">Note: Some questions may have more than one answers.</string>
    <string name="q1">Q 1. How many sense organs do normal humans have?</string>
    <string name="q2">Q 2. How many eyes do normal humans have?</string>
    <string name="q3">Q 3. Name the organ used to taste.</string>
    <string name="q4">Q 4. Which body parts are the limbs of human body?</string>
    <string name="q5">Q 5. Find the odd one out.</string>
    <string name="q5.1">Fingers</string>
    <string name="q5.2">Palm</string>
    <string name="q5.3">Thumb</string>
    <string name="q5.4">Tongue</string>
    <string name="submit">Submit</string>
    <string name="fingers">Fingers</string>
    <string name="chest">Chest</string>
    <string name="arms">Arms</string>
    <string name="type_here">Type Here!</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="welcome_to_the_quiz">Welcome to the Quiz</string>
    <string name="_1">1</string>
    <string name="legs">Legs</string>
    <string name="thanks">Thank You image</string>
    <string name="now_playing">This activity shows that which song is currently being played in the app and its progress is shown by the MediaPlayer class in the java file.</string>
    <string name="track">This activity would list all the songs present in the library.</string>
    <string name="artists">This activity will show the songs categorized on the basis of contributing artists.</string>
    <string name="album">This activity will show the songs categorized by the album/movie the belong to.</string>
    <string name="playlist">This activity will show the songs which the user has added to a particular list.</string>
    <string name="tracks">Track</string>
    <string name="art">Artist</string>
    <string name="playlists">Playlist</string>
    <string name="albums">Album</string>
    <string name="player">Player</string>
    <string name="home">Home</string>
    <string name="logo">logo</string>\
</resources>
