<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cafedroid.project10.QuizActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1A237E"
                android:padding="10dp"
                android:text="@string/welcome_to_the_quiz"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/note" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6" />

                <RadioButton
                    android:id="@+id/ans1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3" />
            </RadioGroup>

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />

                <RadioButton
                    android:id="@+id/ans2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />
            </RadioGroup>

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

            <EditText
                android:id="@+id/answer_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="100dp"
                android:hint="@string/type_here" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

            <CheckBox
                android:id="@+id/ans_check_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/arms" />

            <CheckBox
                android:id="@+id/ans_check_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/legs" />

            <CheckBox
                android:id="@+id/ans_check_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/chest" />

            <CheckBox
                android:id="@+id/ans_check_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/fingers" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5.1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5.2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5.3" />

                <RadioButton
                    android:id="@+id/ans5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5.4" />
            </RadioGroup>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/thankyou"
                android:contentDescription="@string/thanks"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="submitQuiz"
        android:text="@string/submit" />
</RelativeLayout>
