<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.cafedroid.musicapp.MusicActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/playlists_background"
            style="@style/texts"
            android:id="@+id/playlist"
            android:text="@string/playlists"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@color/artists_background"
            android:text="@string/art"
            style="@style/texts"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3">
        <TextView
            android:id="@+id/track"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tracks_background"
            android:text="@string/tracks"
            android:layout_marginLeft="10dp"
            style="@style/texts"/>
        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@color/albums_background"
            android:text="@string/albums"
            style="@style/texts"/>
    </LinearLayout>
    <TextView
        android:id="@+id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:background="@color/now_playing_background"
        style="@style/texts"/>

</LinearLayout>
