<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#263238"
    android:layout_height="match_parent"
    tools:context="com.cafedroid.project10.SquareOne">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#607D8B"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#D50000"
            android:textSize="27sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/sq2"
                android:contentDescription="@string/image_square_one" />
        </RelativeLayout>
        <TextView
            android:id="@+id/hangout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#607D8B"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/hangout"
            android:textColor="#D50000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/address"
            android:textColor="#FFFF"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:padding="10dp"
            android:text="@string/phone"
            android:textColor="#FFFF"
            android:textColorLink="#90CAF9"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
