<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cafedroid.project10.FootballActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_a"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_a_fouls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/fouls_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="15dp"
                android:gravity="center"
                android:background="#1B5E20"
                android:onClick="goalPlusOneA"
                android:text="@string/goal"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="15dp"
                android:gravity="center"
                android:background="#212121"
                android:onClick="foulPlusOneA"
                android:text="@string/foul"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_b"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_b_fouls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/fouls_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="15dp"
                android:gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="#1B5E20"
                android:onClick="goalPlusOneB"
                android:text="@string/goal"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="15dp"
                android:gravity="center"
                android:background="#212121"
                android:onClick="foulPlusOneB"
                android:text="@string/foul"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:onClick="reset"
        android:text="@string/reset" />
</RelativeLayout>
